--- a/locales/cn.json
+++ b/locales/cn.json
@@ -279,5 +279,12 @@
   "zenStyleBetterCaptionsLabel": "更好的字幕",
   "zenStyleBetterCaptionsDesc": "增强字幕样式，添加模糊背景",
   "zenStylePlayerBlurLabel": "播放器控件模糊",
-  "zenStylePlayerBlurDesc": "为播放器控件添加模糊效果"
+  "zenStylePlayerBlurDesc": "为播放器控件添加模糊效果",
+  "playlistDeleteMode": "删除模式",
+  "playlistDeleteModeExit": "退出删除模式",
+  "playlistSelectVideo": "选择视频",
+  "playlistSelectedCount": "{count} 已选择",
+  "playlistDeleteConfirm": "删除 {count} 个视频？",
+  "playlistDeleteSuccess": "{count} 个视频已删除",
+  "playlistDeletePartial": "{success} 个已删除, {fail} 个失败"
 }
