--- a/locales/fr.json
+++ b/locales/fr.json
@@ -279,5 +279,12 @@
   "zenStyleBetterCaptionsLabel": "Meilleurs Sous-titres",
   "zenStyleBetterCaptionsDesc": "Style de sous-titres amélioré avec arrière-plan flou",
   "zenStylePlayerBlurLabel": "Flou des Commandes du Lecteur",
-  "zenStylePlayerBlurDesc": "Ajouter un effet de flou aux commandes du lecteur"
+  "zenStylePlayerBlurDesc": "Ajouter un effet de flou aux commandes du lecteur",
+  "playlistDeleteMode": "Mode de suppression",
+  "playlistDeleteModeExit": "Quitter le mode de suppression",
+  "playlistSelectVideo": "Sélectionner une vidéo",
+  "playlistSelectedCount": "{count} sélectionné",
+  "playlistDeleteConfirm": "Supprimer {count} vidéos de la playlist?",
+  "playlistDeleteSuccess": "{count} vidéos supprimées de la playlist",
+  "playlistDeletePartial": "{success} vidéos supprimées, {fail} échec"
 }
