--- a/locales/pl.json
+++ b/locales/pl.json
@@ -286,5 +286,7 @@
   "playlistSelectedCount": "{count} wybrano",
   "playlistDeleteConfirm": "Usunąć {count} wideo z playlisty?",
   "playlistDeleteSuccess": "{count} wideo usunięto z playlisty",
-  "playlistDeletePartial": "{success} wideo usunięto, {fail} wideo nie udało się usunąć"
+  "playlistDeletePartial": "{success} wideo usunięto, {fail} wideo nie udało się usunąć",
+  "translateComment": "Przetłumacz",
+  "showOriginal": "Pokaż oryginał"
 }
