--- a/locales/pt.json
+++ b/locales/pt.json
@@ -286,5 +286,7 @@
   "playlistSelectedCount": "{count} selecionado(s)",
   "playlistDeleteConfirm": "Excluir {count} vídeo(s) da playlist?",
   "playlistDeleteSuccess": "{count} vídeo(s) excluído(s) da playlist",
-  "playlistDeletePartial": "{success} vídeo(s) excluído(s), {fail} vídeo(s) não foi(ram) possível excluir"
+  "playlistDeletePartial": "{success} vídeo(s) excluído(s), {fail} vídeo(s) não foi(ram) possível excluir",
+  "translateComment": "Traduzir",
+  "showOriginal": "Mostrar original"
 }
